Release 3.5.13
==============

Changes
-------

- The dependency on :mod:`pytz`, a deprecated package, was
  removed and replaced by a dependency to :mod:`zoneinfo`.
  If Python < 3.9 the package :mod:`backports.zoneinfo`
  is an added dependency.


Release 3.5.12
==============

New features
------------

- :func:`rpy2.rinterface.evalr_expr_with_visible` to evaluate
  an expression and return the visibility status of the
  value returned.

- More events in the intialization and termination of an
  embedded R logged by :mod:`rpy2.rinterface_lib.embedded.logger`
  at `INFO` and `DEBUG` levels.

- :meth:`rpy2.robjects.R.__call__` has 2 named arguments "visible" and
  "print_r_warnings" to handle R "invisible" results and print R warnings
  at the end of the evaluation. Invisible results happen when doing
  `rpy2.robjects.r("x <- 1")`. R will return the value of x "invisibly".
  The default are `invisible is True` and `print_r_warnings is True`.


Bugs fixed
----------

- "R magic" cells are now show R warnings at the end of the
  evaluation of an R cell (#issue 226).

Changes
-------

- Evaluating a string as R code using :meth:`rpy2.robjects.R.__call__`
  (e.g., `rpy2.robjects.r("1+2")`) now shows R warnings at the end
  of the evaluation by default.

- :meth:`rpy2.robjects.R.__call__` returns the results invisibly by default
  (see section "New features" for this release).


Release 3.5.11
==============

New features
------------

- :class:`pandas.Categorical` objects are now converted to R
  `factor` objects.

Bugs fixed
----------

- :mod:`pandas` 2.0 makes API-breaking changes that made
  conversion fail (issue #1013).
  
- The default converter for R magic was dropping R factors
  to :mod:`numpy` arrays of integers rather than convert them
  to pandas :class:`Category` (issue #1010).

Changes
-------

- The fix for issue #1010 (see above) changes the numpy conversion
  for R factors. It returns an arrays with the level factors rather